@@ -57,6 +57,7 @@ SUBDIRS += \
 	@WITH_LUA_SUBDIR@ \
 	@WITH_SPIDERMONKEY_SUBDIR@ \
 	@WITH_FILE_SUBDIR@ \
+	@WITH_BASH_SUBDIR@ \
 	@WITH_RC_SUBDIR@ \
 	@WITH_SYCK_SUBDIR@ \
 	@WITH_XAR_SUBDIR@ \
