@@ -12,7 +12,9 @@
     MODULE_TAG_PCRE=""
     MODULE_TAG_SYCK=""
     MODULE_TAG_JS_SRC=""
+    MODULE_TAG_FICL=""
     MODULE_TAG_RC=""
+    MODULE_TAG_BASH=""		# XXX bash is GPLv2 and cannot be bundled w RPM
 
 %checkout
     for name in $MODULE_NAMES "$@"; do
@@ -95,7 +97,7 @@
         --with-libelf \
         --with-selinux \
 	--with-ficl=/usr/lib:/usr/include/ficl \
-        --without-bash \
+        --with-bash=internal \
         --with-rc=internal \
 	--with-js=internal \
         --with-python \
