@@ -1,5 +1,7 @@
 
 5.2b1 -> 5.3a1
+    - jbj: bash: wire-up internal bash build with RPM AutoFu.
+    - jbj: rc: toss the n00b embedding into the -lrpmmisc kitchen sink.
     - jbj: grep: fix: don't segfault if no usage mutex or pool attached.
     - proyvind: remove %distepoch from %provideversion as it will break
 	compatibility with rpm <= 4.5.
